# quant_trade

./: .dockerignore  .env  .env.example  .gitignore  CHECKLIST.md  COMMIT_SUMMARY.md  DEPENDENCY_CHECK.md  Dockerfile  FINAL_SUMMARY.md  GIT_GUIDELINES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  current_environment.txt  docker-compose.yml  pyproject.toml  run_task.sh  test.py
app/: main.py
app/api/: __init__.py  dependencies.py  websocket.py
app/api/routes/: data.py  health.py  portfolio.py  strategies.py  system.py  trading.py
app/core/: config.py
app/infrastructure/database/: connection.py
app/tasks/: __init__.py  realtime_tick_fetcher.py  stock_daily_fetcher.py  stock_data_fetcher.py  trading_calendar_fetcher.py
app/utils/: logger.py
deployment/: README.md  com.quanttrade.service.plist  quant-trade.service  supervisor.conf
docker/: Dockerfile
docs/: DEPLOYMENT_GUIDE.md  TASK_SCHEDULER.md  baostock_optimization.md  stock_daily_multithread.md  stock_data_fetcher.md
migrations/: 001_create_stock_base_table.sql  env.py
quant_trade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
requirements/: base.txt  dev.txt
scripts/: README.md  create_clickhouse_schema.sql  install.py  project_tree.py  run_tasks.py  service_manager.py  setup_dev.py  test_company_sync.py  test_stock_fetcher.py
