[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trade"
version = "0.1.0"
description = "A quantitative trading system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Stock Data
    "akshare>=1.12.0",
    "tushare>=1.4.0",
    "baostock>=0.8.8",

    # Task Scheduling
    "apscheduler>=3.10.0",

    # API Server
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",

    # HTTP Client
    "httpx>=0.25.0",

    # Databases
    "clickhouse-driver>=0.2.6",

    # Logging
    "loguru>=0.7.0",

    # Environment & Configuration
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",

    # Code Quality
    "black==23.11.0",
    "isort==5.13.2",
    "flake8>=6.0.0",

    # Development Tools
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

prod = [
    # 生产环境特定依赖
]

# 其余配置保持不变...
# [project.urls]
# "Homepage" = "https://github.com/yourusername/quant-trade"
# "Documentation" = "https://github.com/yourusername/quant-trade/docs"
# "Repository" = "https://github.com/yourusername/quant-trade"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# asyncio_mode = "auto"
# addopts = [
#     "--verbose",
#     "--strict-markers",
#     "--strict-config",
#     "--cov=app",
#     "--cov-report=term-missing",
#     "--cov-report=html"
# ]
